fix: hide hero section on small screens to improve LCP score

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3408,6 +3408,7 @@ table td {
 
 @media only screen and (max-width: 576px) {
   .hero__right {
+    display: none;
     margin-top: 32px
   }
 }
